--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -23,7 +23,7 @@
           Profile<span class="caret"></span>
         </a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-          <h6 class="dropdown-header" *ngIf="isAdmin()">DeLorean Admin</h6>
+          <h6 class="dropdown-header" *ngIf="isAdmin()">ETW Admin</h6>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/config">Site Config</a>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/tickets">Ticket Config</a>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/users">Users Admin</a>
