--- a/src/app/sponsors/sponsor-list/sponsor-list.component.html
+++ b/src/app/sponsors/sponsor-list/sponsor-list.component.html
@@ -5,13 +5,13 @@
   <!--Section: Sponsors-->
   <section class="section pb-3">
     <!--Section heading-->
-    <h1 class="section-heading">Our Sponsors</h1>
+    <h1 class="section-heading">Sponsors</h1>
     <div class="text-center" *ngIf="isLoggedIn() && isAdmin()">
       <button class="btn btn-success" (click)="levelModal.show()">Create Level</button>
       <button class="btn btn-primary" routerLink="/sponsors/new">Create Sponsor</button>
     </div>
     <div class="col sponsors">
-      <h4>We partner with some of the<br/>world's most innovative brands.</h4>
+      <h4>We are partnering with some of the<br/>world's most innovative brands.</h4>
       <a class="btn btn-primary waves-light" [href]="(siteConfig | async)?.sponsorURL" target="_blank">Become a Sponsor</a>
     </div>
     <div class="col sponsors" *ngFor="let level of levels | async">
