--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -73,7 +73,9 @@
   <!--Copyright-->
   <div class="footer-copyright">
     <div class="container-fluid">
-      &copy; {{ copyright }} Copyright <a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a> Based on the <a href="https://github.com/mayeedwin/DeLorean-v2" target="_blank">DeLorean Project - Maye</a>
+ &copy; {{ copyright }} Copyright
+<a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a> Based on the <a href="https://github.com/mayeedwin/DeloreanKenyaV2" target="_blank">DeLorean Project - Kenya</a>
+
     </div>
   </div>
   <!--/.Copyright-->
