--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,6 @@
 @import "./styles/loading.scss";
 
 .intro-1 {
-  background: url("assets/img/etw3.png") no-repeat center center;
+  background: url("assets/img/hero.png") no-repeat center center;
   background-size: cover;
 }
