--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -29,7 +29,7 @@
 }
 
 .hm-black-strong .mask, .hm-black-strong .full-bg-img {
-  background-color: rgba(0,0,0,0.5)!important;
+  background-color:#2196F3 !important;
 }
 
 .text-center {
