--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,18 +6,20 @@
     <div class="row">
       <div class="col-lg-3 col-md-6 ml-auto">
         <h5 class="titles font-bold mt-3 mb-4">About {{ (siteConfig | async)?.groupName }}</h5>
-        <p>ETW is an annual tech, industry and enterprise meet up with an agenda of highlighting, and discussing challenges, seeking, creating and showcasing tailored solutions with the aim accelerating economic development.</p>
-        <p><small><strong>Disclaimer:</strong> <em>{{ (siteConfig | async)?.groupName }} is an independent Event; our activities and the opinions expressed here should in no way be linked to our partners.</em></small></p>
+        <p>We are a Google Developer Community that meets regularly to discuss the latest Google Technologies, Tools, SDKs, APIs, and much more.</p>
+        <p><small><strong>Disclaimer:</strong> <em>{{ (siteConfig | async)?.groupName }} is an independent group; our activities and the opinions expressed here should in no way be linked to Google, the corporation.</em></small></p>
       </div>
       <hr class="w-100 clearfix d-sm-none">
       <div class="col-lg-2 col-md-6 ml-auto">
         <h5 class="title font-bold mt-3 mb-4">Links</h5>
         <ul>
           <li><a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a></li>
-          <li><a href="http://www.awhere.com/" target="_blank">aWhere</a></li>
-          <li><a href="https://moringaschool.com/" target="_blank">Moringa School</a></li>
-          <li><a href="https://bunifu.co.ke/" target="_blank">Bunifu Technologies</a></li>
-          <li><a href="https://gdgmoi.com/" target="_blank">GDG Moi, Eldoret</a></li>
+            
+          <li><a href="https://developers.google.com/" target="_blank">Google Developers</a></li>
+          <li><a href="https://www.womentechmakers.com/" target="_blank">Women Techmakers</a></li>
+          <li><a href="https://github.com/mayeedwin/" target="_blank">Maye Edwin</a></li>
+
+
         </ul>
       </div>
       <hr class="w-100 clearfix d-sm-none">
@@ -33,9 +35,15 @@
       <div class="col-lg-2 col-md-6 ml-auto">
         <h5 class="title font-bold mt-3 mb-4">FAQs</h5>
         <ul>
-          <li><a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a></li>
-          <li><a href="" target="_blank">Sisibo Hub</a></li>
-          <li><a href="" target="_blank">Code of Conduct</a></li>
+      
+<li>
+<a href="https://devfestnairobi.gdgkenya.org" target="_blank">DevFest Nairobi</a>
+
+</li>
+    <li><a href="https://devfestnairobi.gdgkenya.org" target="_blank">GDG Nairobi</a></li>
+
+          <li><a href="https://developers.google.com/events/devfest/" target="_blank">GDG DevFest Season</a></li>
+          <li><a href="https://developers.google.com/groups/guidelines/" target="_blank">GDG Code of Conduct</a></li>
         </ul>
       </div>
 
@@ -49,9 +57,9 @@
   <div class="call-to-action">
     <ul>
       <li>
-        <h5>You want to scale up?</h5>
+        <h5>Reserve your ticket today!</h5>
       </li>
-      <li><a [href]="(siteConfig | async)?.ticketURL" target="_blank" class="btn btn-danger">RSVP now</a></li>
+      <li><a [href]="(siteConfig | async)?.ticketURL" target="_blank" class="btn btn-danger">Buy Ticket</a></li>
     </ul>
   </div>
   <!--/.Call to action-->
@@ -73,8 +81,7 @@
   <!--Copyright-->
   <div class="footer-copyright">
     <div class="container-fluid">
- &copy; {{ copyright }} Copyright
-<a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a> Based on the <a href="https://github.com/mayeedwin/DeloreanKenyaV2" target="_blank">DeLorean Project - Kenya</a>
+      &copy; {{ copyright }} Copyright <a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName }}</a> Based on the <a href="https://github.com/mayeedwin/DeloreanKenyaV2" target="_blank">DeLorean Project Kenya</a>
 
     </div>
   </div>
