--- a/src/app/speakers/speaker-list/speaker-list.component.html
+++ b/src/app/speakers/speaker-list/speaker-list.component.html
@@ -4,7 +4,7 @@
 <div class="container">
   <!--Section: Speakers-->
   <section class="section team-section pb-3">
-    <h1 class="section-heading">Speakers</h1>
+    <h1 class="section-heading">Our Amazing Speakers</h1>
     <div class="text-center" *ngIf="isLoggedIn() && isAdmin()">
       <button type="button" class="btn btn-success" routerLink="/speakers/new">Create Speaker</button>
     </div>
