--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -76,48 +76,29 @@
   font-size:1.2rem;
 }
 
-.section.team-section .avatar ul{
-  list-style-type:none;
-  padding:0;
-  text-align:center;
-}
-
-.section.team-section .avatar{
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
-  -webkit-box-pack:center;
-  -webkit-justify-content:center;
-  -ms-flex-pack:center;
-  justify-content:center;
-  -webkit-box-align:center;
-  -webkit-align-items:center;
-  -ms-flex-align:center;
-  align-items:center;
-  height:100%;
-}
-
-.section.team-section .avatar p {
-  margin:0;
-}
-
-.section.team-section .avatar ul li {
-  margin-bottom:1rem;
-}
-
-.section.team-section .avatar {
+.section.team-section .avatar,
+.author-box .avatar {
+  max-width: 200px;
+  height: auto;
+  position: relative;
+  overflow: hidden;
   margin-bottom:2rem;
   height:auto;
 }
 
-.section.team-section .avatar .rounded-circle {
-  max-width:170px;
-}
-
-.section.team-section .avatar img {
-  max-width:200px;
-  height:auto
+.section.team-section .avatar .rounded-circle,
+.author-box .avatar .rounded-circle {
+  display: block;
+  margin: 0 auto;
+  height: 170px;
+  width: 170px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  background: center no-repeat;
+  background-size: cover;
 }
 
 .section.team-section .title-color {
