fix(home, sponsor-list): fixes image display issue with non-horizontal sponsor images

--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -124,7 +124,7 @@
   border: 0;
   vertical-align: middle;
   display: inline-block;
-  width: 256px;
-  max-height: 100%;  /* <-- Set maximum height to 100% of its parent */
-  max-width: 100%;   /* <-- Set maximum width to 100% of its parent */
+  width: 200px;
+  max-height: 200px;
+  max-width: 200px;
 }
