--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -26,6 +26,7 @@
           <h6 class="dropdown-header" *ngIf="isAdmin()">DeLorean Admin</h6>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/config">Site Config</a>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/tickets">Ticket Config</a>
+          <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/surveys">Survey Data</a>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/users">Users Admin</a>
           <div class="divider dropdown-divider" *ngIf="isAdmin()"></div>
           <a class="dropdown-item waves-light" routerLink="/profile">My Account</a>
