--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,9 +31,9 @@
       <div class="col-lg-2 col-md-6 ml-auto">
         <h5 class="title font-bold mt-3 mb-4">FAQ</h5>
         <ul>
+          <li><a routerLink="/code-of-conduct">Code of Conduct</a></li>
           <li><a href="https://meetup.com/pro/gdg" target="_blank">Google Developer Groups</a></li>
           <li><a href="https://developers.google.com/events/devfest/" target="_blank">GDG DevFest Season</a></li>
-          <li><a href="https://developers.google.com/groups/guidelines/" target="_blank">GDG Code of Conduct</a></li>
         </ul>
       </div>
 
